# shorka

./: .env.example  .gitignore  README.md  pyproject.toml  run_windows.ps1
app/: __init__.py  api_server.py  audio_bus.py  brain.py  config.py  context.py  cues.py  listener.py  main.py  narrator.py  session.py  stt.py  voices.py  wake_word.py
app/middleware/: __init__.py  confirm.py
app/os_layer/: __init__.py  apps_index.py  keyboard.py  ocr.py  screenshot.py  uia.py  windows.py
app/prompts/: system.md
app/tools/: __init__.py  apps.py  confirm.py  history.py  keyboard.py  screen.py  vision.py  voice.py  web.py
data/: voices.json
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/windows/runner/: main.cpp
